19 April, 2001: [v0.1.0]
	Ported to Redhat Linux.
23 April, 2001: [v0.1.1]
	Added dquickfmedian and median2D.
24 April 2001: [v0.1.2]
	Makefile maintenance: specified gzip suffix.
26 June 2001: [v0.1.3]
	Added medianbox.
15 November 2001: [v0.1.4]
	Fix Makefile.  Install section wasn't creating directories.
27 November 2002: [v0.1.5]
	Add 'dstddev' for double precision support.
25 July 2002: [v0.1.6]
	Add dchstwo, dchisqimg.
	Upgrade Makefile.
24 February 2006: [v0.1.7]
	add install-all rule. run ranlib after lib installation (for Darwin
	ld).  add some include files to avoid warnings with gcc4.0.
17 May 2006: [v0.1.8]
	remove the 'unsigned' for naxes (because of changes in Cfitsio).